@@ -1,3 +1,8 @@
+2015-02-09  Niels Möller  <nisse@lysator.liu.se>
+
+	* testsuite/base64-test.c (test_fuzz_once, test_fuzz): Additional
+	tests, based on contribution by Amos Jeffries.
+
 2015-02-05  Niels Möller  <nisse@lysator.liu.se>
 
 	* configure.ac (LIBHOGWEED_MAJOR): Undo latest bump, 4 should be
